--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,13 +7,14 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 295; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 340; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
-    --first-color: hsl(var(--hue-color), 60%, 36%);
+    --first-color: hsl(var(--hue-color), 60%, 45%);
     --first-color-second: hsl(var(--hue-color), 69%, 61%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 90%);
+    --title-two-color: hsl(var(--hue-color), 69%, 61%);
     --title-color: hsl(var(--hue-color), 8%, 15%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
@@ -74,6 +75,7 @@ body.dark-theme{
     /* HSL color mode */
     --first-color-second: hsl(var(--hue-color), 30%, 8%);
     --title-color: hsl(var(--hue-color), 8%, 95%);
+    --title-two-color: hsl(var(--hue-color), 69%, 61%);
     --text-color: hsl(var(--hue-color), 8%, 75%);
     --input-color: hsl(var(--hue-color), 29%, 16%);
     --body-color: hsl(var(--hue-color), 28%, 12%);
@@ -313,6 +315,11 @@ img {
   font-size: var(--big-font-size);
 }
 
+.home__title__2{
+  font-size: var(--big-font-size);
+  color: var(--title-two-color);
+}
+
 .home__subtitle{
   font-size: var(--h3-font-size);
   color: var(--text-color);
@@ -329,7 +336,7 @@ img {
 }
 
 .home__scroll-button{
-  color: var(--first-color);
+  color: var(--first-color-second);
   transition: .3s;
 }
 
@@ -355,7 +362,7 @@ img {
 /*==================== BUTTONS ====================*/
 .button{
   display: inline-block;
-  background-color: var(--first-color-alt);
+  background-color: var(--first-color);
   color: #fff;
   padding: 1rem;
   border-radius: .5rem;
@@ -363,7 +370,7 @@ img {
 }
 
 .button:hover{
-  background-color: var(--first-color-second);
+  background-color: var(--first-color-alt);
 }
 
 .button__icon{
