--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -490,39 +490,59 @@ img {
 }
 
 .skills__css{
-  width: 50%;
+  width: 65%;
 }
 
 .skills__javascript{
-  width: 70%;
+  width: 55%;
 }
 
 .skills__php{
-  width: 10%;
+  width: 65%;
 }
 
-.skills__php{
-  width: 80%;
-}
-
-.skills__node{
-  width: 50%;
-}
-
-.skills__firebase{
-  width: 70%;
+.skills__java{
+  width: 55%;
 }
 
 .skills__python{
-  width: 10%;
+  width: 40%;
+}
+
+.skills__laravel{
+  width: 60%;
+}
+
+.skills__bootstrap{
+  width: 60%;
+}
+
+.skills__django{
+  width: 30%;
+}
+
+.skills__mysql{
+  width: 65%;
+}
+
+.skills__oracle{
+  width: 30%;
+}
+
+.skills__sqlite{
+  width: 20%;
+}
+
+.skills__mongodb{
+  width: 15%;
 }
 
 .skills__photoshop{
-  width: 80%;
+  width: 55%;
 }
 
 .skills__illustrator{
-  width: 50%;
+  width: 35%;
 }
 
 .skills__canva{
