--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,7 +161,7 @@ img {
 
 /*==================== LAYOUT ====================*/
 .container {
-  max-width: 768px;
+  max-width: 900px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
@@ -896,7 +896,7 @@ img {
   .portfolio__content,
   .contact__container,
   .footer__container{
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2 , 1fr);
   }
 
   .qualification__sections{
@@ -1056,14 +1056,12 @@ img {
     bottom: -4.5rem;
   }
 
-  .contact__information{
+  .contact__container{
     text-align: center;
   }
-  .contact__form{
-    width: 460px;
-  }
-  .contact__input{
-    grid-template-columns: repeat(2, 1fr);
+  .contact__information{
+    display: inline-flex;
+    padding: 20px;
   }
 
   .footer__social{
